Updated address, fixed spacing, and added redirect in what-is-corgi.html to the CORGI website

--- a/css/plugins/default.css
+++ b/css/plugins/default.css
@@ -1379,9 +1379,11 @@ section.lg {padding: 120px 0; }
 .padding-twenty-five-left {padding-left:25%;}
 .padding-5px-left {padding-left:5px;}
 .padding-10px-left {padding-left:10px;}
+.padding-13px-left {padding-left:12px;}
 .padding-15px-left {padding-left:15px;}
 .padding-20px-left {padding-left:20px;}
 .padding-25px-left {padding-left:25px;}
+.padding-27px-left {padding-left:27px;}
 .padding-30px-left {padding-left:30px;}
 .padding-35px-left {padding-left:35px;}
 .padding-40px-left {padding-left:40px;}
